--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "microservices/ordering"]
 	path = microservices/ordering
 	url = git@github.com:apelisser/algashop-ordering.git
+[submodule "microservices/billing"]
+	path = microservices/billing
+	url = git@github.com:apelisser/algashop-billing.git
