--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "microservices/billing"]
 	path = microservices/billing
 	url = git@github.com:apelisser/algashop-billing.git
+[submodule "microservices/product-catalog"]
+	path = microservices/product-catalog
+	url = git@github.com:apelisser/algashop-product-catalog
